--- a/config/sync/core.entity_view_display.media.video.banner.yml
+++ b/config/sync/core.entity_view_display.media.video.banner.yml
@@ -7,7 +7,35 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media_entity.bundle.video
   module:
+    - layout_builder
+    - layout_discovery
     - video_embed_field
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          106fd31e-547c-4c74-a613-c60fd6bf9a09:
+            uuid: 106fd31e-547c-4c74-a613-c60fd6bf9a09
+            region: content
+            configuration:
+              id: 'field_block:media:video:field_media_video_embed_field'
+              label_display: ''
+              formatter:
+                type: video_embed_field_video
+                label: hidden
+                settings:
+                  responsive: true
+                  width: 854
+                  height: 480
+                  autoplay: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: Qtjl7K0w-kBxNg_z_hAoddt62ChWnrdec4iJYtrcw9o
 id: media.video.banner
