--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -8,11 +8,35 @@ dependencies:
     - field.field.node.news.field_banner
     - field.field.node.news.field_category
     - field.field.node.news.field_metatags
-    - field.field.node.news.panelizer
     - node.type.news
   module:
+    - layout_builder
+    - layout_discovery
     - text
     - user
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          93eb38ef-1c72-4f55-8a3a-887ec00cfe02:
+            uuid: 93eb38ef-1c72-4f55-8a3a-887ec00cfe02
+            region: content
+            configuration:
+              id: 'field_block:node:news:body'
+              label_display: ''
+              formatter:
+                label: hidden
+                type: text_summary_or_trimmed
+                settings:
+                  trim_length: 600
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: e0kH4Flgqj1A2pNhZvbdMZwE5mW65HRDE6liMMYou2o
 id: node.news.teaser
@@ -31,9 +55,10 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   addtoany: true
   field_banner: true
   field_category: true
   field_metatags: true
-  panelizer: true
