--- a/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
@@ -9,6 +9,32 @@ dependencies:
     - field.field.paragraph.pullquote.field_oc_short_text
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
+  module:
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          73498948-3a15-408e-9900-9cb7fd77e83e:
+            uuid: 73498948-3a15-408e-9900-9cb7fd77e83e
+            region: content
+            configuration:
+              id: 'field_block:paragraph:pullquote:field_admin_description'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: Fre6cQ-HzRIHFfCmxDRPPKqalDFzVNOLau9H82BzukA
 id: paragraph.pullquote.preview
