--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.node.news.field_banner
     - field.field.node.news.field_category
     - field.field.node.news.field_metatags
-    - field.field.node.news.panelizer
     - node.type.news
   module:
     - entity_browser_entity_form
@@ -94,7 +93,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  url_redirects:
+    weight: 50
+    region: content
 hidden:
   created: true
-  panelizer: true
   uid: true
