--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.node.page.field_banner
     - field.field.node.page.field_metatags
     - field.field.node.page.field_oc_widgets
-    - field.field.node.page.panelizer
     - node.type.page
   module:
     - entity_browser_entity_form
@@ -89,9 +88,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  url_redirects:
+    weight: 50
+    region: content
 hidden:
   created: true
-  panelizer: true
   promote: true
   sticky: true
   uid: true
