--- a/config/sync/core.entity_form_display.node.profiles.default.yml
+++ b/config/sync/core.entity_form_display.node.profiles.default.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.node.profiles.field_phone
     - field.field.node.profiles.field_position
     - field.field.node.profiles.field_profile_image
-    - field.field.node.profiles.panelizer
     - node.type.profiles
   module:
     - entity_browser_entity_form
@@ -102,9 +101,11 @@ content:
     weight: 8
     region: content
     third_party_settings: {  }
+  url_redirects:
+    weight: 50
+    region: content
 hidden:
   created: true
-  panelizer: true
   promote: true
   sticky: true
   title: true
