--- a/config/sync/core.entity_view_display.media.document.banner.yml
+++ b/config/sync/core.entity_view_display.media.document.banner.yml
@@ -8,6 +8,31 @@ dependencies:
     - media_entity.bundle.document
   module:
     - file
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          0deff592-3fc0-4c47-bbd6-46095e283595:
+            uuid: 0deff592-3fc0-4c47-bbd6-46095e283595
+            region: content
+            configuration:
+              id: 'field_block:media:document:field_media_file'
+              label_display: ''
+              formatter:
+                type: file_default
+                label: hidden
+                settings:
+                  use_description_as_link_text: true
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: Ug5hcPT-Rj1T9WKjLJulJGJ-7wvsl0zHR1zYN5W_SLM
 id: media.document.banner
@@ -19,7 +44,8 @@ content:
     type: file_default
     weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      use_description_as_link_text: true
     third_party_settings: {  }
     region: content
 hidden:
