--- a/config/sync/core.entity_view_display.media.document.default.yml
+++ b/config/sync/core.entity_view_display.media.document.default.yml
@@ -7,6 +7,31 @@ dependencies:
     - media_entity.bundle.document
   module:
     - file
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          ce6e55be-8a6c-46f8-8465-39daf6042cef:
+            uuid: ce6e55be-8a6c-46f8-8465-39daf6042cef
+            region: content
+            configuration:
+              id: 'field_block:media:document:field_media_file'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings:
+                  use_description_as_link_text: true
+                third_party_settings: {  }
+                type: file_default
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: RtAgjysVJJYmI4BBbrWoB2DKgE7ueKBWjHkaMmAuiEM
 id: media.document.default
@@ -17,7 +42,8 @@ content:
   field_media_file:
     weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
     region: content
