--- a/config/sync/core.entity_view_display.media.document.medium.yml
+++ b/config/sync/core.entity_view_display.media.document.medium.yml
@@ -8,6 +8,31 @@ dependencies:
     - media_entity.bundle.document
   module:
     - file
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          0fd2b7e6-a0be-4ae7-8670-eb6f59959b5f:
+            uuid: 0fd2b7e6-a0be-4ae7-8670-eb6f59959b5f
+            region: content
+            configuration:
+              id: 'field_block:media:document:field_media_file'
+              label_display: ''
+              formatter:
+                type: file_default
+                label: hidden
+                settings:
+                  use_description_as_link_text: true
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: jOwsaukDVYpqqttx0u41R8NvNCdydjrUsNx6uOjIj8k
 id: media.document.medium
@@ -19,7 +44,8 @@ content:
     type: file_default
     weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      use_description_as_link_text: true
     third_party_settings: {  }
     region: content
 hidden:
