--- a/config/sync/core.entity_view_display.media.video.medium.yml
+++ b/config/sync/core.entity_view_display.media.video.medium.yml
@@ -7,7 +7,35 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media_entity.bundle.video
   module:
+    - layout_builder
+    - layout_discovery
     - video_embed_field
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          57f1adef-2d59-4720-b8cd-a2a07784dab9:
+            uuid: 57f1adef-2d59-4720-b8cd-a2a07784dab9
+            region: content
+            configuration:
+              id: 'field_block:media:video:field_media_video_embed_field'
+              label_display: ''
+              formatter:
+                type: video_embed_field_video
+                label: hidden
+                settings:
+                  responsive: true
+                  width: 854
+                  height: 480
+                  autoplay: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: 1HChDpADZ7T9KQEqDUR4LWJAcfhHHw68kDnXjyBP2T8
 id: media.video.medium
