--- a/config/sync/core.entity_view_display.media.video.small.yml
+++ b/config/sync/core.entity_view_display.media.video.small.yml
@@ -7,7 +7,35 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media_entity.bundle.video
   module:
+    - layout_builder
+    - layout_discovery
     - video_embed_field
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          03e2c3d0-8440-48e4-bf6b-b0f2d690d7bf:
+            uuid: 03e2c3d0-8440-48e4-bf6b-b0f2d690d7bf
+            region: content
+            configuration:
+              id: 'field_block:media:video:field_media_video_embed_field'
+              label_display: ''
+              formatter:
+                type: video_embed_field_video
+                label: hidden
+                settings:
+                  responsive: true
+                  width: 854
+                  height: 480
+                  autoplay: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: Cjp9m2IShDzyxefF1XP0MS8SgJijf4AU0T62xN9o26I
 id: media.video.small
