--- a/config/sync/core.entity_view_display.node.blog.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog.teaser.yml
@@ -9,18 +9,51 @@ dependencies:
     - field.field.node.blog.field_banner
     - field.field.node.blog.field_metatags
     - field.field.node.blog.field_tags
-    - field.field.node.blog.panelizer
     - node.type.blog
   module:
-    - panelizer
+    - layout_builder
+    - layout_discovery
     - text
     - user
 third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          b344fd22-3136-45b1-89dd-4141f8c99d08:
+            uuid: b344fd22-3136-45b1-89dd-4141f8c99d08
+            region: content
+            configuration:
+              id: 'field_block:node:blog:field_author'
+              label_display: ''
+              formatter:
+                type: entity_reference_label
+                label: hidden
+                settings:
+                  link: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          19de76a5-dd9c-42ec-b8f6-9765f0e09f00:
+            uuid: 19de76a5-dd9c-42ec-b8f6-9765f0e09f00
+            region: content
+            configuration:
+              id: 'field_block:node:blog:body'
+              label_display: ''
+              formatter:
+                label: hidden
+                type: text_summary_or_trimmed
+                settings:
+                  trim_length: 140
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
 _core:
   default_config_hash: lIY-NGSfPl4W3_jTzC90vPH0Bf4iBEw9Zd1Pw226NWk
 id: node.blog.teaser
@@ -31,14 +64,14 @@ content:
   body:
     label: hidden
     type: text_summary_or_trimmed
-    weight: 1
+    weight: 0
     settings:
       trim_length: 140
     third_party_settings: {  }
     region: content
   field_author:
     type: entity_reference_label
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link: false
@@ -51,4 +84,3 @@ hidden:
   field_tags: true
   flippy_pager: true
   links: true
-  panelizer: true
