--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -11,11 +11,35 @@ dependencies:
     - field.field.node.event.field_event_pin_info
     - field.field.node.event.field_metatags
     - field.field.node.event.field_oc_date
-    - field.field.node.event.panelizer
     - node.type.event
   module:
+    - layout_builder
+    - layout_discovery
     - text
     - user
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          d74682dd-8f59-480d-aec1-667d7775fb10:
+            uuid: d74682dd-8f59-480d-aec1-667d7775fb10
+            region: content
+            configuration:
+              id: 'field_block:node:event:body'
+              label_display: ''
+              formatter:
+                label: hidden
+                type: text_summary_or_trimmed
+                settings:
+                  trim_length: 600
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: GK0HiFImTvGdIj70A0gW6IlZXSvSdXuewHBLNjyfXeI
 id: node.event.teaser
@@ -34,6 +58,8 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   addtoany: true
   field_banner: true
@@ -42,4 +68,3 @@ hidden:
   field_event_pin_info: true
   field_metatags: true
   field_oc_date: true
-  panelizer: true
