--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -7,114 +7,98 @@ dependencies:
     - field.field.node.landing_page.field_banner
     - field.field.node.landing_page.field_metatags
     - field.field.node.landing_page.field_oc_widgets
-    - field.field.node.landing_page.panelizer
     - node.type.landing_page
   module:
     - entity_reference_revisions
+    - layout_builder
+    - layout_discovery
     - metatag
-    - panelizer
     - text
     - user
 third_party_settings:
-  panelizer:
-    enable: true
-    custom: true
-    allow: true
-    default: default
-    displays:
-      default:
-        blocks:
-          cc5ec35d-5181-40ba-85de-37f989a4fd42:
-            id: 'entity_field:node:title'
-            label: Title
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: string
-              settings:
-                link_to_entity: false
-              third_party_settings: {  }
-              weight: 0
-              region: content
-            region: top
-            weight: 0
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            uuid: cc5ec35d-5181-40ba-85de-37f989a4fd42
-          af93de64-c923-429c-b4fd-7641fd362112:
-            id: 'entity_field:node:body'
-            label: Body
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: text_default
-              settings: {  }
-              third_party_settings: {  }
-              weight: 0
-              region: content
-            region: main
-            weight: -10
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            uuid: af93de64-c923-429c-b4fd-7641fd362112
-          2546e9ea-3be3-42fd-87d4-63e2f45c4ef3:
-            id: 'entity_field:node:field_oc_widgets'
-            label: Widgets
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: entity_reference_revisions_entity_view
-              settings:
-                view_mode: default
-              third_party_settings: {  }
-              weight: 0
-              region: content
-            region: widgets
-            weight: -2
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            uuid: 2546e9ea-3be3-42fd-87d4-63e2f45c4ef3
-          3e5151e7-9435-4b23-b51c-8bde259c5732:
-            id: 'entity_field:node:field_banner'
-            label: Banner
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: entity_reference_entity_view
-              settings:
-                view_mode: banner
-              third_party_settings: {  }
-              weight: 0
-            region: top
-            weight: -2
-            uuid: 3e5151e7-9435-4b23-b51c-8bde259c5732
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-          57f623a4-1857-4597-a36d-c8e21fb99311:
-            id: system_breadcrumb_block
-            label: Breadcrumbs
-            provider: system
-            label_display: '0'
-            region: top
-            weight: -1
-            uuid: 57f623a4-1857-4597-a36d-c8e21fb99311
-            context_mapping: {  }
-        id: panels_variant
-        label: Default
-        uuid: cfb3f498-2997-474e-81fc-71ef6ef23762
-        weight: 0
-        layout: kermit
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
         layout_settings: {  }
-        page_title: ''
-        storage_type: panelizer_default
-        storage_id: 'node:landing_page:default:default'
-        builder: ipe
-        pattern: panelizer
-        static_context: {  }
+        components:
+          02d32b97-5752-4d0f-8eb3-de3413b50d8b:
+            uuid: 02d32b97-5752-4d0f-8eb3-de3413b50d8b
+            region: content
+            configuration:
+              id: 'field_block:node:landing_page:field_banner'
+              label: Banner
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: entity_reference_entity_view
+                settings:
+                  view_mode: banner
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          2d62265e-ae58-4309-8608-eadd292e3358:
+            uuid: 2d62265e-ae58-4309-8608-eadd292e3358
+            region: content
+            configuration:
+              id: 'field_block:node:landing_page:title'
+              label: Title
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          76bf8cbb-ca39-45d8-9276-f923e8550fc4:
+            uuid: 76bf8cbb-ca39-45d8-9276-f923e8550fc4
+            region: content
+            configuration:
+              id: 'field_block:node:landing_page:body'
+              label: Body
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          8385c801-d808-49fe-9538-a9b9c74e79ab:
+            uuid: 8385c801-d808-49fe-9538-a9b9c74e79ab
+            region: content
+            configuration:
+              id: 'field_block:node:landing_page:field_oc_widgets'
+              label: Widgets
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: entity_reference_revisions_entity_view
+                settings:
+                  view_mode: default
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+    allow_custom: false
+    is_enabled: true
 _core:
   default_config_hash: 1h2sEQ222bYyFk67-1xEhAMXEdbzEI367eTDmO2XiM8
 id: node.landing_page.default
@@ -160,4 +144,4 @@ content:
     third_party_settings: {  }
 hidden:
   addtoany: true
-  panelizer: true
+  layout_builder__layout: true
