--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -7,125 +7,98 @@ dependencies:
     - field.field.node.page.field_banner
     - field.field.node.page.field_metatags
     - field.field.node.page.field_oc_widgets
-    - field.field.node.page.panelizer
     - node.type.page
   module:
     - entity_reference_revisions
+    - layout_builder
+    - layout_discovery
     - metatag
-    - panelizer
     - text
     - user
 third_party_settings:
-  panelizer:
-    enable: true
-    custom: true
-    allow: false
-    default: default
-    displays:
-      default:
-        blocks:
-          275b2f58-05e6-4e5b-aff7-1173b7247604:
-            id: 'entity_field:node:body'
-            label: Body
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: text_default
-              settings: {  }
-              third_party_settings: {  }
-              weight: 0
-            region: main
-            weight: -4
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            uuid: 275b2f58-05e6-4e5b-aff7-1173b7247604
-          2c6e22bf-f0f9-4371-afab-15a3020d3d1f:
-            id: 'entity_field:node:field_oc_widgets'
-            label: Widgets
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: entity_reference_revisions_entity_view
-              settings:
-                view_mode: default
-              third_party_settings: {  }
-              weight: 0
-            region: main
-            weight: -3
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            uuid: 2c6e22bf-f0f9-4371-afab-15a3020d3d1f
-          ad0ad227-b75d-4779-bfd1-8989e21f60c6:
-            id: 'entity_field:node:field_banner'
-            label: Banner
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: entity_reference_entity_view
-              settings:
-                view_mode: banner
-              third_party_settings: {  }
-              weight: 0
-            region: top
-            weight: -10
-            uuid: ad0ad227-b75d-4779-bfd1-8989e21f60c6
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-          140addf7-0e72-4690-954f-f2d1e4341d69:
-            id: system_breadcrumb_block
-            label: Breadcrumbs
-            provider: system
-            label_display: '0'
-            region: top
-            weight: -9
-            uuid: 140addf7-0e72-4690-954f-f2d1e4341d69
-            context_mapping: {  }
-          07599151-3128-4990-b666-363c68da8771:
-            id: 'entity_field:node:title'
-            label: Title
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: string
-              settings:
-                link_to_entity: false
-              third_party_settings: {  }
-              weight: 0
-            region: top
-            weight: -8
-            uuid: 07599151-3128-4990-b666-363c68da8771
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-          a96bcff0-bf28-44d9-a97f-f2411a952350:
-            id: 'menu_block:main'
-            label: 'Main navigation'
-            provider: menu_block
-            label_display: visible
-            level: 1
-            depth: 0
-            expand: 1
-            parent: 'main:'
-            suggestion: main
-            region: sidebar
-            weight: -3
-            uuid: a96bcff0-bf28-44d9-a97f-f2411a952350
-            context_mapping: {  }
-        id: panels_variant
-        label: Default
-        uuid: f39947fc-5a50-45de-bdc3-d91b7c819049
-        weight: 0
-        layout: beaker
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
         layout_settings: {  }
-        page_title: null
-        storage_type: panelizer_default
-        storage_id: 'node:page:default:default'
-        builder: ipe
-        pattern: panelizer
-        static_context: {  }
+        components:
+          57031955-b249-4a7e-8e30-08f9a620ff2e:
+            uuid: 57031955-b249-4a7e-8e30-08f9a620ff2e
+            region: content
+            configuration:
+              id: 'field_block:node:page:field_banner'
+              label: Banner
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: entity_reference_entity_view
+                settings:
+                  view_mode: banner
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          73e38ea3-00cf-4122-bcb1-43c1373e9723:
+            uuid: 73e38ea3-00cf-4122-bcb1-43c1373e9723
+            region: content
+            configuration:
+              id: 'field_block:node:page:title'
+              label: Title
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          1eaee1a1-cd33-4dbf-ad13-921a03d7286f:
+            uuid: 1eaee1a1-cd33-4dbf-ad13-921a03d7286f
+            region: content
+            configuration:
+              id: 'field_block:node:page:body'
+              label: Body
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          cb646449-e63c-4f69-a259-a75f5bf8320e:
+            uuid: cb646449-e63c-4f69-a259-a75f5bf8320e
+            region: content
+            configuration:
+              id: 'field_block:node:page:field_oc_widgets'
+              label: Widgets
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: entity_reference_revisions_entity_view
+                settings:
+                  view_mode: default
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+    allow_custom: false
+    is_enabled: true
 _core:
   default_config_hash: 6cLH5reWp4HB-2AJp7PY1kXioC8KrzluoED6Q9UGPHw
 id: node.page.default
@@ -172,4 +145,3 @@ content:
     region: content
 hidden:
   links: true
-  panelizer: true
