--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -8,11 +8,35 @@ dependencies:
     - field.field.node.page.field_banner
     - field.field.node.page.field_metatags
     - field.field.node.page.field_oc_widgets
-    - field.field.node.page.panelizer
     - node.type.page
   module:
+    - layout_builder
+    - layout_discovery
     - text
     - user
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          dca3cc95-3f6f-4ece-94eb-efbf3c73e2c8:
+            uuid: dca3cc95-3f6f-4ece-94eb-efbf3c73e2c8
+            region: content
+            configuration:
+              id: 'field_block:node:page:body'
+              label_display: ''
+              formatter:
+                label: hidden
+                type: text_summary_or_trimmed
+                settings:
+                  trim_length: 600
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: ZKlgRvwjFgPvtXy7-CmXEtsqWwsOKOO3BwX3q5H3tFQ
 id: node.page.teaser
@@ -36,8 +60,9 @@ content:
   links:
     weight: 101
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_banner: true
   field_metatags: true
   field_oc_widgets: true
-  panelizer: true
