--- a/config/sync/core.entity_view_display.node.support_book.default.yml
+++ b/config/sync/core.entity_view_display.node.support_book.default.yml
@@ -4,85 +4,78 @@ status: true
 dependencies:
   config:
     - field.field.node.support_book.body
-    - field.field.node.support_book.panelizer
     - node.type.support_book
+    - system.menu.support-book
   module:
-    - panelizer
+    - layout_builder
+    - layout_discovery
+    - menu_block
     - text
     - user
 third_party_settings:
-  panelizer:
-    enable: true
-    custom: true
-    allow: true
-    default: default
-    displays:
-      default:
-        blocks:
-          1ccaf0d3-577d-4fed-ac32-4fc6d8436271:
-            id: 'entity_field:node:body'
-            label: Body
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: text_default
-              settings: {  }
-              third_party_settings: {  }
-              weight: 0
-            region: main
-            weight: 0
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-            uuid: 1ccaf0d3-577d-4fed-ac32-4fc6d8436271
-          f585c0a0-b836-423f-be62-bbe33c0fb92a:
-            id: 'entity_field:node:title'
-            label: Title
-            provider: ctools_block
-            label_display: '0'
-            formatter:
-              label: hidden
-              type: string
-              settings:
-                link_to_entity: false
-              third_party_settings: {  }
-              weight: 0
-            region: main
-            weight: -1
-            uuid: f585c0a0-b836-423f-be62-bbe33c0fb92a
-            context_mapping:
-              entity: '@panelizer.entity_context:entity'
-          edd3d954-39cf-4d40-a4c1-8f3a0f79ae06:
-            id: book_navigation
-            label: 'Website User Guide'
-            provider: book
-            label_display: visible
-            block_mode: 'book pages'
-            region: sidebar
-            weight: 0
-            uuid: edd3d954-39cf-4d40-a4c1-8f3a0f79ae06
-            context_mapping: {  }
-          c483dd43-f4fc-4a83-bfa7-81e419268a95:
-            id: system_breadcrumb_block
-            label: Breadcrumbs
-            provider: system
-            label_display: '0'
-            region: top
-            weight: 0
-            uuid: c483dd43-f4fc-4a83-bfa7-81e419268a95
-            context_mapping: {  }
-        id: panels_variant
-        label: Default
-        uuid: 3b2cafc9-965e-4034-a6b2-65df9a61e28f
-        weight: 0
-        layout: beaker
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
         layout_settings: {  }
-        page_title: ''
-        storage_type: panelizer_default
-        storage_id: 'node:support_book:default:default'
-        builder: ipe
-        pattern: panelizer
-        static_context: {  }
+        components:
+          8e0351bb-7144-42ba-9aa9-4f05d69689a0:
+            uuid: 8e0351bb-7144-42ba-9aa9-4f05d69689a0
+            region: content
+            configuration:
+              id: 'menu_block:support-book'
+              label: 'Support Book'
+              provider: menu_block
+              label_display: visible
+              level: 1
+              depth: 0
+              expand: 0
+              parent: 'support-book:'
+              suggestion: support_book
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          ad6a5067-9af1-48ed-843a-0bf10b3a93be:
+            uuid: ad6a5067-9af1-48ed-843a-0bf10b3a93be
+            region: content
+            configuration:
+              id: 'field_block:node:support_book:title'
+              label: Title
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          9378ea9d-cbcb-4ea7-ad2f-7de2e8e4f7c8:
+            uuid: 9378ea9d-cbcb-4ea7-ad2f-7de2e8e4f7c8
+            region: content
+            configuration:
+              id: 'field_block:node:support_book:body'
+              label: Body
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+    allow_custom: false
+    is_enabled: true
 _core:
   default_config_hash: zs7lQwC-x3RO8F51uxAs-b0WMoO79Uls3sPCfC8Ggks
 id: node.support_book.default
@@ -99,9 +92,8 @@ content:
     region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
   addtoany: true
-  panelizer: true
