--- a/config/sync/core.entity_view_display.paragraph.accordion_item.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.accordion_item.preview.yml
@@ -8,6 +8,32 @@ dependencies:
     - field.field.paragraph.accordion_item.field_admin_description
     - field.field.paragraph.accordion_item.field_oc_long_text
     - paragraphs.paragraphs_type.accordion_item
+  module:
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          a492a0d1-6bcd-41a7-91c1-483c1ce7a25f:
+            uuid: a492a0d1-6bcd-41a7-91c1-483c1ce7a25f
+            region: content
+            configuration:
+              id: 'field_block:paragraph:accordion_item:field_admin_description'
+              label_display: ''
+              formatter:
+                type: string
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: sEaO-zlYqBFt6R4vgMl2yKHRz-dTN2ISkaN_nYv9wCU
 id: paragraph.accordion_item.preview
