--- a/config/sync/core.entity_view_display.paragraph.basic_page_section.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.basic_page_section.preview.yml
@@ -9,11 +9,67 @@ dependencies:
     - field.field.paragraph.basic_page_section.field_background_image
     - field.field.paragraph.basic_page_section.field_background_style
     - field.field.paragraph.basic_page_section.field_layout
+    - field.field.paragraph.basic_page_section.field_section_intro
     - field.field.paragraph.basic_page_section.field_section_title
     - field.field.paragraph.basic_page_section.field_section_widgets
     - paragraphs.paragraphs_type.basic_page_section
   module:
+    - layout_builder
+    - layout_discovery
     - options
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          12269ce1-5e84-4a9b-8de3-94eaa1976f57:
+            uuid: 12269ce1-5e84-4a9b-8de3-94eaa1976f57
+            region: content
+            configuration:
+              id: 'field_block:paragraph:basic_page_section:field_admin_description'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          4e6e6fe2-0ac8-45df-809f-3a4ce0fc3749:
+            uuid: 4e6e6fe2-0ac8-45df-809f-3a4ce0fc3749
+            region: content
+            configuration:
+              id: 'field_block:paragraph:basic_page_section:field_layout'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings: {  }
+                third_party_settings: {  }
+                type: list_default
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+          e5356cb5-c913-4076-bb1d-292b71c89313:
+            uuid: e5356cb5-c913-4076-bb1d-292b71c89313
+            region: content
+            configuration:
+              id: 'field_block:paragraph:basic_page_section:field_background_style'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings: {  }
+                third_party_settings: {  }
+                type: list_default
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 2
 id: paragraph.basic_page_section.preview
 targetEntityType: paragraph
 bundle: basic_page_section
@@ -44,5 +100,6 @@ content:
 hidden:
   field_anchor_link: true
   field_background_image: true
+  field_section_intro: true
   field_section_title: true
   field_section_widgets: true
