--- a/config/sync/core.entity_view_display.paragraph.block_placer.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.block_placer.preview.yml
@@ -8,6 +8,32 @@ dependencies:
     - field.field.paragraph.block_placer.field_block
     - field.field.paragraph.block_placer.field_widget_title
     - paragraphs.paragraphs_type.block_placer
+  module:
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          6cfe6894-58bb-4e34-951e-4c9fc61c1ee9:
+            uuid: 6cfe6894-58bb-4e34-951e-4c9fc61c1ee9
+            region: content
+            configuration:
+              id: 'field_block:paragraph:block_placer:field_admin_description'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 id: paragraph.block_placer.preview
 targetEntityType: paragraph
 bundle: block_placer
