--- a/config/sync/core.entity_view_display.paragraph.form.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.form.preview.yml
@@ -8,6 +8,32 @@ dependencies:
     - field.field.paragraph.form.field_oc_form
     - field.field.paragraph.form.field_widget_title
     - paragraphs.paragraphs_type.form
+  module:
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          e4b52277-b5d6-4950-9e83-e09610010b72:
+            uuid: e4b52277-b5d6-4950-9e83-e09610010b72
+            region: content
+            configuration:
+              id: 'field_block:paragraph:form:field_admin_description'
+              label_display: ''
+              formatter:
+                type: string
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: RvbKJrdbeXbNPfaZiJOs4EumMNVWVi-D-u6qJLv0aP0
 id: paragraph.form.preview
