--- a/config/sync/core.entity_view_display.paragraph.lightbox_gallery.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.lightbox_gallery.preview.yml
@@ -8,6 +8,32 @@ dependencies:
     - field.field.paragraph.lightbox_gallery.field_oc_image_multi
     - field.field.paragraph.lightbox_gallery.field_widget_title
     - paragraphs.paragraphs_type.lightbox_gallery
+  module:
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          8717e177-f26e-4a61-b525-a12fe665ae12:
+            uuid: 8717e177-f26e-4a61-b525-a12fe665ae12
+            region: content
+            configuration:
+              id: 'field_block:paragraph:lightbox_gallery:field_admin_description'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: Ou1W4YuHSN7eSegM3x9TWpZpukzzsSEAvpYyMEB4HR4
 id: paragraph.lightbox_gallery.preview
