--- a/config/sync/core.entity_view_display.paragraph.text.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.text.preview.yml
@@ -8,6 +8,32 @@ dependencies:
     - field.field.paragraph.text.field_oc_long_text
     - field.field.paragraph.text.field_widget_title
     - paragraphs.paragraphs_type.text
+  module:
+    - layout_builder
+    - layout_discovery
+third_party_settings:
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          7df11044-4729-425d-aee0-e5439ea62319:
+            uuid: 7df11044-4729-425d-aee0-e5439ea62319
+            region: content
+            configuration:
+              id: 'field_block:paragraph:text:field_admin_description'
+              label_display: ''
+              formatter:
+                label: hidden
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
 _core:
   default_config_hash: 3LILobBZ-eyHffflFgFi7Gon7Jd8n_OIVzKolRcFqc4
 id: paragraph.text.preview
