--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,7 +6,6 @@ module:
   automated_cron: 0
   block: 0
   block_content: 0
-  book: 0
   breakpoint: 0
   ckeditor: 0
   color: 0
@@ -48,6 +47,7 @@ module:
   image: 0
   image_style_quality: 0
   inline_entity_form: 0
+  layout_builder: 0
   layout_discovery: 0
   libraries: 0
   link: 0
@@ -63,9 +63,6 @@ module:
   oc_custom: 0
   options: 0
   page_cache: 0
-  panelizer: 0
-  panels: 0
-  panels_ipe: 0
   paragraphs_type_permissions: 0
   path: 0
   pathologic: 0
